fix some lint errors and run npm update
