# swagger-output.json
@@ -22,9 +22,7 @@
   "paths": {
     "/profile": {
       "get": {
-        "tags": [
-          "Authentication"
-        ],
+        "tags": ["Authentication"],
         "summary": "Get Profile",
         "description": "This will return the user profile information for the current authenticated user.",
         "responses": {
@@ -36,9 +34,7 @@
     },
     "/individuals/getAllIndividuals": {
       "get": {
-        "tags": [
-          "Individuals"
-        ],
+        "tags": ["Individuals"],
         "summary": "Get all individuals",
         "description": "This will return all the individuals in the database",
         "responses": {
@@ -56,9 +52,7 @@
     },
     "/individuals/getIndividualById/{id}": {
       "get": {
-        "tags": [
-          "Individuals"
-        ],
+        "tags": ["Individuals"],
         "summary": "Get an individual by Id",
         "description": "This will return an individual by Id",
         "parameters": [
@@ -89,9 +83,7 @@
     },
     "/individuals/": {
       "post": {
-        "tags": [
-          "Individuals"
-        ],
+        "tags": ["Individuals"],
         "summary": "Create a new Individual to the collection",
         "description": "Create an Individual by providing all required information.",
         "responses": {
@@ -150,9 +142,7 @@
     },
     "/individuals/{id}": {
       "put": {
-        "tags": [
-          "Individuals"
-        ],
+        "tags": ["Individuals"],
         "summary": "Update an existing Individual by Id",
         "description": "Update an existing individual by providing all required information.",
         "parameters": [
@@ -219,9 +209,7 @@
         }
       },
       "delete": {
-        "tags": [
-          "Individuals"
-        ],
+        "tags": ["Individuals"],
         "summary": "Delete an Individual by Id",
         "description": "This will delete a single individual from the database by Id. This action is permanent.",
         "parameters": [
@@ -249,9 +237,7 @@
     },
     "/household/getall": {
       "get": {
-        "tags": [
-          "Households"
-        ],
+        "tags": ["Households"],
         "summary": "Get all Households",
         "description": "This will list all households in the database",
         "responses": {
@@ -272,9 +258,7 @@
     },
     "/household/getbyid/{id}": {
       "get": {
-        "tags": [
-          "Households"
-        ],
+        "tags": ["Households"],
         "summary": "Get a single household by its ID",
         "description": "Returns a single household by its id",
         "parameters": [
@@ -308,9 +292,7 @@
     },
     "/household/getbyhoh/{hoh}": {
       "get": {
-        "tags": [
-          "Households"
-        ],
+        "tags": ["Households"],
         "summary": "Get a single household by its head of household",
         "description": "Returns a single household by the head of the household",
         "parameters": [
@@ -344,9 +326,7 @@
     },
     "/household/getbyaddress/{street}/{city}/{state}/{zip}": {
       "get": {
-        "tags": [
-          "Households"
-        ],
+        "tags": ["Households"],
         "summary": "Get a single household by its address",
         "description": "Returns a single household by its address",
         "parameters": [
@@ -404,9 +384,7 @@
     },
     "/household/createhousehold": {
       "post": {
-        "tags": [
-          "Households"
-        ],
+        "tags": ["Households"],
         "summary": "Create a Household",
         "description": "Create a Household by providing all required information.",
         "responses": {
@@ -436,10 +414,7 @@
                 "state": "ID",
                 "zip": "83440",
                 "country": "United States",
-                "headOfHousehold": [
-                  "65f2162017c8cc6b12754e5e",
-                  "65f2166117c8cc6b12754e5f"
-                ],
+                "headOfHousehold": ["65f2162017c8cc6b12754e5e", "65f2166117c8cc6b12754e5f"],
                 "residents": [
                   "65f2162017c8cc6b12754e5e",
                   "65f2166117c8cc6b12754e5f",
@@ -453,9 +428,7 @@
     },
     "/household/updatehousehold/{id}": {
       "put": {
-        "tags": [
-          "Households"
-        ],
+        "tags": ["Households"],
         "summary": "Update a Household by its ID",
         "description": "Update an existing household by providing all required information.",
         "parameters": [
@@ -495,10 +468,7 @@
                 "state": "ID",
                 "zip": "83440",
                 "country": "United States",
-                "headOfHousehold": [
-                  "65f2162017c8cc6b12754e5e",
-                  "65f2166117c8cc6b12754e5f"
-                ],
+                "headOfHousehold": ["65f2162017c8cc6b12754e5e", "65f2166117c8cc6b12754e5f"],
                 "residents": [
                   "65f2162017c8cc6b12754e5e",
                   "65f2166117c8cc6b12754e5f",
@@ -512,9 +482,7 @@
     },
     "/household/deletehousehold/{id}": {
       "delete": {
-        "tags": [
-          "Households"
-        ],
+        "tags": ["Households"],
         "summary": "Delete a household by its ID",
         "description": "Permanently delete a household by its ID",
         "parameters": [
@@ -548,9 +516,7 @@
     },
     "/anniversaries/getall": {
       "get": {
-        "tags": [
-          "Anniversaries"
-        ],
+        "tags": ["Anniversaries"],
         "summary": "Get all Anniversaries",
         "description": "This will list all anniversaries in the database",
         "responses": {
@@ -568,9 +534,7 @@
     },
     "/anniversaries/getformatted": {
       "get": {
-        "tags": [
-          "Anniversaries"
-        ],
+        "tags": ["Anniversaries"],
         "summary": "Get all Anniversaries formatted with names",
         "description": "This will list all anniversaries in the database with names and formatted dates",
         "responses": {
@@ -582,9 +546,7 @@
     },
     "/anniversaries/getbyid/{id}": {
       "get": {
-        "tags": [
-          "Anniversaries"
-        ],
+        "tags": ["Anniversaries"],
         "summary": "Get a single anniversary by anniversary Id",
         "description": "This will return a single anniversary in the database by anniversary Id",
         "parameters": [
@@ -612,9 +574,7 @@
     },
     "/anniversaries/getbymonth/{month}": {
       "get": {
-        "tags": [
-          "Anniversaries"
-        ],
+        "tags": ["Anniversaries"],
         "summary": "Get anniversaries by month",
         "description": "This will return a list of anniversaries that occur in the specified month",
         "parameters": [
@@ -642,9 +602,7 @@
     },
     "/anniversaries/createanniversary": {
       "post": {
-        "tags": [
-          "Anniversaries"
-        ],
+        "tags": ["Anniversaries"],
         "summary": "Create an Anniversary",
         "description": "Create an Anniversary by providing all required information.",
         "responses": {
@@ -666,10 +624,7 @@
           "content": {
             "application/json": {
               "example": {
-                "couple": [
-                  "individualId1",
-                  "individualId2"
-                ],
+                "couple": ["individualId1", "individualId2"],
                 "anniversaryDate": "2020-06-30"
               }
             }
@@ -679,9 +634,7 @@
     },
     "/anniversaries/updateanniversary/{id}": {
       "put": {
-        "tags": [
-          "Anniversaries"
-        ],
+        "tags": ["Anniversaries"],
         "summary": "Update an Anniversary by Id",
         "description": "Update an existing anniversary by providing the anniversaryId and the updated information.",
         "parameters": [
@@ -713,10 +666,7 @@
           "content": {
             "application/json": {
               "example": {
-                "couple": [
-                  "individualId1",
-                  "individualId2"
-                ],
+                "couple": ["individualId1", "individualId2"],
                 "anniversaryDate": "2020-06-30"
               }
             }
@@ -726,9 +676,7 @@
     },
     "/anniversaries/deleteanniversary/{id}": {
       "delete": {
-        "tags": [
-          "Anniversaries"
-        ],
+        "tags": ["Anniversaries"],
         "summary": "Delete an Anniversary by Id",
         "description": "This will delete a single anniversary from the database by Id. This action is permanent.",
         "parameters": [
@@ -756,9 +704,7 @@
     },
     "/news/getall": {
       "get": {
-        "tags": [
-          "News"
-        ],
+        "tags": ["News"],
         "summary": "Get all News Stories",
         "description": "This will return all the news stories in the database unformatted",
         "responses": {
@@ -773,9 +719,7 @@
     },
     "/news/getformatted": {
       "get": {
-        "tags": [
-          "News"
-        ],
+        "tags": ["News"],
         "summary": "Get all News Stories formatted with author names",
         "description": "This will return all the news stories in the database",
         "responses": {
@@ -787,9 +731,7 @@
     },
     "/news/{id}": {
       "get": {
-        "tags": [
-          "News"
-        ],
+        "tags": ["News"],
         "summary": "Get Single News Story by newsId",
         "description": "This will return a single news story by news Id",
         "parameters": [
@@ -814,9 +756,7 @@
     },
     "/news/author/{postedBy}": {
       "get": {
-        "tags": [
-          "News"
-        ],
+        "tags": ["News"],
         "summary": "Get News by Author",
         "description": "This will return all news stories with postedBy matching the provided individualId",
         "parameters": [
@@ -841,9 +781,7 @@
     },
     "/news/status/{status}": {
       "get": {
-        "tags": [
-          "News"
-        ],
+        "tags": ["News"],
         "summary": "Get News by Status",
         "description": "This will return all news stories with status matching the requested status of ",
         "parameters": [
@@ -868,9 +806,7 @@
     },
     "/news/createnews": {
       "post": {
-        "tags": [
-          "News"
-        ],
+        "tags": ["News"],
         "summary": "Create a News Story",
         "description": "Create a news story by providing all required information.",
         "responses": {
@@ -906,9 +842,7 @@
     },
     "/news/updatenews/{id}": {
       "put": {
-        "tags": [
-          "News"
-        ],
+        "tags": ["News"],
         "summary": "Update a News Story by Id",
         "description": "Update an existing news story by providing all required information.",
         "parameters": [
@@ -951,9 +885,7 @@
     },
     "/news/deletenews/{id}": {
       "delete": {
-        "tags": [
-          "News"
-        ],
+        "tags": ["News"],
         "summary": "Delete a News Story by Id",
         "description": "This will delete a single news story from the database by Id. This action is permanent.",
         "parameters": [
@@ -978,9 +910,7 @@
     },
     "/lookup/parents/{id}": {
       "get": {
-        "tags": [
-          "Relationships"
-        ],
+        "tags": ["Relationships"],
         "summary": "Get parents",
         "description": "This will return a list of parents for the individual id provided.",
         "parameters": [
@@ -1008,9 +938,7 @@
     },
     "/lookup/children/{parentId}": {
       "get": {
-        "tags": [
-          "Relationships"
-        ],
+        "tags": ["Relationships"],
         "summary": "Get children",
         "description": "This will return a list of individuals with the provided parentId listed in the parents array.",
         "parameters": [
@@ -1038,9 +966,7 @@
     },
     "/lookup/grandchildren/{grandparentId}": {
       "get": {
-        "tags": [
-          "Relationships"
-        ],
+        "tags": ["Relationships"],
         "summary": "Get grandchildren",
         "description": "This will return a list of individuals who are grandchildren of the provided grandparentId.",
         "parameters": [
@@ -1068,9 +994,7 @@
     },
     "/lookup/birthdays": {
       "get": {
-        "tags": [
-          "Birthdays"
-        ],
+        "tags": ["Birthdays"],
         "summary": "Get all birthdays",
         "description": "This will return the names of all individuals in the database with their birth date",
         "responses": {
@@ -1085,9 +1009,7 @@
     },
     "/lookup/birthdaysFormatted": {
       "get": {
-        "tags": [
-          "Birthdays"
-        ],
+        "tags": ["Birthdays"],
         "summary": "Get all birthdays",
         "description": "This will return the full names of all individuals in the database sorted by birth month and date along with their date of birth and the age of the individual as of today",
         "responses": {
@@ -1105,9 +1027,7 @@
     },
     "/lookup/birthdays/{month}": {
       "get": {
-        "tags": [
-          "Birthdays"
-        ],
+        "tags": ["Birthdays"],
         "summary": "Get birthdays by month",
         "description": "This will return the full names of all individuals in the database born in the specified month along with their date of birth and the age of the individual as of today",
         "parameters": [
@@ -1129,9 +1049,7 @@
     },
     "/lookup/mailingLabels": {
       "get": {
-        "tags": [
-          "Mailing Labels"
-        ],
+        "tags": ["Mailing Labels"],
         "summary": "Get Mailing Labels",
         "description": "This will return the full names of all individuals in the database with their mailing address.",
         "responses": {
